accessibility: fix announcement box contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -387,7 +387,7 @@ header a, footer a {
 }
 
 .news__box-category span {
-  background: #8a64e5;
+  background: #815BE1;
   border: 3px solid #fff;
   border-radius: 5px;
   font-size: 16px;
